very prototype-ish oauth fix, UNTESTED!!!!, keycloack server implemented